# django-blog

./: .gitignore  README.md  gunicorn.service  pyproject.toml  requirements.txt
src/: db.sqlite3 copy before messing with models
src/blogapi/: admin.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/blogapi/management/commands/: clearposts.py  clearprojects.py  cleartags.py  fakeposts.py  fakeprojects.py
src/blogapi/migrations/: 0001_initial.py  0002_alter_blogpost_created_at_alter_project_created_at.py  0003_alter_blogpost_created_at_alter_project_created_at.py  0004_alter_blogpost_created_at_alter_project_created_at.py  0005_alter_blogpost_image_alter_project_image.py  0006_alter_blogpost_image_alter_project_image.py
src/blogapi/views/: post_views.py  service_views.py  user_views.py
src/core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
src/core/logging/: filters.py  handlers.py
src/core/settings/: base.py  development.py  production.py
src/core/views/: error_handlers.py
src/templates/: 404.html
